fix header z-index

--- a/app/app/layout-style.module.css
+++ b/app/app/layout-style.module.css
@@ -30,7 +30,7 @@
 .header {
   position: sticky;
   top: 0;
-  z-index: 1;
+  z-index: var(--header-z-index);
 }
 
 .sidebar,
